Responsive design: fix layout on mobile Major changes to element styles to support lower resolution devices.
Notably, uses media queries to change the font size depending on device.
Also relies much more heavily on relative units (em / rem) instead of
percentages / bootstrap columns (which scale badly on mobile).

Also, redid the nav bar so that it scrolls left-to-right on extremely
low resolution devices (iPhone 5/5S/SE)

Also, changed "Resources" to "Course"

--- a/styles/home.css
+++ b/styles/home.css
@@ -27,15 +27,28 @@ video#games-reel {
 
 #reel-overlay-outer {
     position: absolute;
-    top: 30%;
-    left: 50%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
     z-index: 10;
 }
 
 #reel-overlay-inner {
-    position: relative;
-    left: -50%;
-    white-space: nowrap;
+    display: inline-block;
+    vertical-align: middle;
+    max-width: 40em;
+    width: 99%;
+    height: 20em;
+    margin: 0 auto;
+}
+
+#reel-overlay-outer:before {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  height: 100%;
 }
 
 #want-to-make-games {
@@ -76,6 +89,8 @@ video#games-reel {
 
 /* Section 3 */
 #section-3 {
+    display: block;
+    overflow:auto;
     z-index: 5;
     position: relative;
     background:
@@ -88,19 +103,30 @@ video#games-reel {
     background-repeat: no-repeat;
 }
 
+#section-3-content {
+    display: block;
+
+    width: 25%;
+    min-width: 25em;
+    float: right;
+}
+
 /* Section 4 */
 #section-4 {
     background: linear-gradient(270deg, #891222 0%, #C01930 100%);
     margin-top: -0.5rem;
+    padding: 0 2em;
 }
 
 #section-4-icon-container {
-    height: 180%;
+    width: 100%;
+    height: 13em;
+    margin: 1em auto;
 }
 
 #section-4-icon {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 10em;
+    margin: 0 auto;
 }
 
 /* Section 5 */
@@ -126,10 +152,14 @@ video#games-reel {
 
 #section-5-preview-overlay {
     position: absolute;
-    top: 60%;
     left: 0;
     bottom: 0;
-    right: 0;
+
+    max-width: 100%;
+    max-height: 100%;
+    padding: 1em;
+    vertical-align: bottom;
+
     background-color: #00000088;
     background-position: top;
     color: white;
